# GENBoostGPU

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  README.md  pyproject.toml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  troubleshooting.rst
docs/api/: genboostgpu.data_io.rst  genboostgpu.enet_boosting.rst  genboostgpu.hyperparams.rst  genboostgpu.orchestration.rst  genboostgpu.pipeline.rst  genboostgpu.rst  genboostgpu.snp_processing.rst  genboostgpu.tuning.rst  genboostgpu.vmr_runner.rst  index.rst
docs/tutorials/: index.rst  simulation.rst  vmr_caudate.rst
docs/user-guide/: cpg_pipeline.rst  data.rst  index.rst  performance.rst  reproducibility.rst  tuning.rst  workflow.rst
examples/: cpg_test_million.py  simu_test_100n.py  vmr_test_caudate.py
scripts/: prepare_cpg_inputs.R
src/genboostgpu/: __init__.py  boosting_net.py  data_io.py  enet_boosting.py  genotype_processing.py  orchestration.py  pipeline.py  snp_processing.py  tuning.py  utils.py  vmr_runner.py
tests/: test_boosting.py  test_boosting.py~  test_boosting_net.py  test_cpg_orchestration.py  test_cpg_runner.py  test_cpg_tuning.py  test_data_io.py  test_enet_boosting.py  test_genotype_processing.py  test_pipeline.py  test_pipeline.py~  test_snp_processing.py  test_utils.py
