[project]
name = "genboostgpu"
version = "0.1.0"
description = ""
authors = [
    {name = "Kynon J Benjamin",email = "kj.benjamin90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cudf-cu12 (>=25.8.0,<26.0.0)",
    "cuml-cu12 (>=25.8.0,<26.0.0)",
    "dask-cuda (>=25.8.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "genboostgpu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
