[project]
name = "genboostgpu"
version = "0.0.0"
description = "GENBoostGPU provides a scalable framework for running elastic net regression with boosting across thousands of CpG sites, leveraging GPU acceleration with RAPIDS cuML, CuPy, and cuDF."
authors = [
    {name = "Kynon J Benjamin",email = "kj.benjamin90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cudf-cu12 (>=25.8.0,<26.0.0)",
    "cuml-cu12 (>=25.8.0,<26.0.0)",
    "dask-cuda (>=25.8.0,<26.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "cupy-cuda12x (>=13.3.0,<14.0.0)",
    "numpy (<2.3.0)",
    "pandas-plink (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "genboostgpu", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
ruff = "^0.13.0"
pytest-cov = "^7.0.0"
mypy = "^1.18.1"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
dirty = true
format-jinja = "{base}+{commit}"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
